Fix the dark mode disabled variant of the  msteamsw icon

--- a/static/css/icomoon.css
+++ b/static/css/icomoon.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "icomoon";
-    src: url("../fonts/icomoon.woff2?ije3j") format("woff2");
+    src: url("../fonts/icomoon.woff2?hdwu") format("woff2");
     font-weight: normal;
     font-style: normal;
     font-display: block;
